# hyverx

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust-ci.yml
COGS/: FTR.md
cocotests/: cuda_test.cu  cuda_test.exp  opencl_test.cpp  openmp_test.cpp  sycl_test.cpp
src/: lib.rs  main.rs
src/algorithms/: bch.rs  convolutional.rs  fountain.rs  hamming.rs  ldpc.rs  mod.rs  polar_code.rs  reed_muller.rs  reed_solomon.rs  turbo.rs
src/config/: mod.rs
src/error/: mod.rs
src/galois/: mod.rs
src/hardware/: mod.rs
src/hardware/cpu/: avx2_kernels.cpp  mod.rs  openmp_kernels.cpp
src/hardware/dgpu/: cuda_kernels.cu  cudnn_kernels.cu  mod.rs
src/hardware/igpu/: mod.rs  opencl_kernels.cl  sycl_kernels.cpp
src/hardware/include/: avx2_kernels.hpp  cuda_kernels.cuh  cudnn_kernels.cuh  openmp_kernels.hpp  sycl_kernels.hpp
src/neural/: mod.rs
src/parallel/: algorithm_allocator.rs  dimension_mapper.rs  mod.rs  thread_pool.rs  work_scheduler.rs
src/xypher_grid/: mod.rs  xg.py
